Fix image scrollbars in Differential
Summary: This should be auto, not scroll (which always shows bars).

Test Plan: test my diff in a few browsers

Reviewers: epriestley

Reviewed By: epriestley

Subscribers: epriestley, Korvin

Differential Revision: https://secure.phabricator.com/D10302

--- a/webroot/rsrc/css/application/differential/changeset-view.css
+++ b/webroot/rsrc/css/application/differential/changeset-view.css
@@ -217,7 +217,7 @@ td.cov-I {
 }
 
 .differential-image-stage {
-  overflow: scroll;
+  overflow: auto;
 }
 
 .differential-meta-notice {
